fixed header margin on small screens and added custom hr after favorites

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,11 @@ html,body {
     padding-top: 10px;
 }
 
+#favorites-separator {
+    margin-top: 10px;
+    border: 1px solid #777777;
+}
+
 .btn-flexbox {
     display: flex;
     flex-direction: row;
